--- a/style.css
+++ b/style.css
@@ -20,3 +20,167 @@
 body {
   font-family: "Instrument Sans", sans-serif;
 }
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+h1,
+h2 {
+  font-size: clamp(3rem, 10vw, 15rem);
+  font-weight: 500;
+  letter-spacing: -0.025rem;
+  text-transform: uppercase;
+}
+
+p {
+  font-size: 1.25rem;
+  font-weight: 400;
+  letter-spacing: -0.025rem;
+  line-height: 1.25;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 1.75rem;
+  }
+}
+
+section {
+  position: relative;
+  width: 100%;
+  height: 100dvh;
+  min-height: 100dvh;
+  overflow: hidden;
+}
+
+section.four {
+  height: 125dvh;
+
+  @media screen and (min-width: 1024px) {
+    height: 200dvh;
+  }
+}
+
+.container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  transform: rotate(30deg);
+  transform-origin: bottom left;
+  will-change: transform;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+  }
+}
+
+.one .container {
+  color: #000000;
+  background-color: var(--base-100);
+}
+
+.two .container {
+  color: #ffffff;
+  background-color: var(--base-200);
+}
+
+.three .container {
+  color: #000000;
+  background-color: var(--base-300);
+}
+
+.four .container {
+  color: #000000;
+  background-color: var(--base-400);
+}
+
+.five .container {
+  color: #ffffff;
+  background-color: var(--base-500);
+}
+
+.six .container {
+  color: #000000;
+  background-color: var(--base-600);
+}
+
+.container .col {
+  flex: 1;
+  display: flex;
+}
+
+.col .img {
+  width: 90%;
+  height: auto;
+  aspect-ratio: 4/5;
+  overflow: hidden;
+
+  @media screen and (min-width: 1024px) {
+    width: 45%;
+  }
+}
+
+.one .container .col:nth-child(2),
+.five .container .col:nth-child(2),
+.six .container .col:nth-child(2) {
+  align-items: flex-end;
+}
+
+.two .container .col:nth-child(1),
+.three .container .col:nth-child(2) {
+  justify-content: center;
+  align-items: center;
+}
+
+.two .container .col:nth-child(2),
+.three .container .col:nth-child(1) {
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+
+  @media screen and (min-width: 1024px) {
+    justify-content: space-between;
+    gap: 0;
+  }
+}
+
+.four .container {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  text-align: center;
+}
+
+.four .img {
+  margin-bottom: 4rem;
+  width: 90%;
+
+  @media screen and (min-width: 1024px) {
+    width: 30%;
+  }
+}
+
+.four p {
+  width: 100%;
+
+  @media screen and (min-width: 1024px) {
+    width: 50%;
+  }
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70dvh;
+  padding: 2rem;
+  color: #ffffff;
+  background-color: #0f0f0f;
+}
