--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@
 }
 
 body {
+  position: relative;
   font-family: "Instrument Sans", sans-serif;
+}
+
+main {
+  position: relative;
+  z-index: 1;
 }
 
 img {
@@ -174,7 +180,10 @@ section.four {
 }
 
 .footer {
-  position: relative;
+  position: sticky;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
   display: flex;
   align-items: center;
   justify-content: center;
